--- a/src/components/App.less
+++ b/src/components/App.less
@@ -11,6 +11,8 @@ h1,h2,h3,h4,h5 { .FF("Noto Sans"); }
 @Dx : ~`@{D}+"px"`;
 @E : 5 ;
 @Ex : ~`@{E}+"px"`;
+@E2x : ~`2*@{E}+"px"`;
+@E3x : ~`3*@{E}+"px"`;
 
 @bleu0 : lighten(@bleu1,15%);
 @bleu1 : #b7c5d3;
@@ -191,38 +193,39 @@ body { .M0();
       
       
       .window { .POSabs(); .Z(10); // ----------------------------------------------------------------------------------------------------------- window
-         .BGcol(rgba(255,255,255,0.95)); box-shadow:0 0 5px 2px rgba(0,0,0,0.35);
          
          &.alert { .Wx(300);.Hx(200); left:~"calc((100% - 300px)/2)";top:~"calc((100% - 200px) / 2)";   }
          
-         .icon,.scro { .Wx(@E); height:~`"calc(100% - 2* "+@{E}+"px)"`; .POSabs();  .DB(); left:0; top:@Ex; .TA5();  /*.Px(@D/10,@D/10);*/ }
+         .icon,.scro { .Wx(@E); height:~`"calc(100% - 4* "+@{E}+"px)"`; .POSabs();  .DB(); left:0; top:@Ex; .TA5(); .Z(1);  /*.Px(@D/10,@D/10);*/ }
       
-         .menu,.info { .TA5(); .Hx(@E); .LHx(@E - 2); bottom:0;left:@Ex; .POSabs();  .VA(middle); width:~`"calc(100% - 2* "+@{E}+"px)"`;
-            .C(white); &,label { .FZ(@D/2.5); .FF("Noto Sans"); }
+         .menu,.info { .TA5(); .Hx(@E); .LHx(12); bottom:0;left:@E3x; .POSabs();  .VA(middle); width:~`"calc(100% - 6* "+@{E}+"px)"`; .Z(1);
+            .C(white); &,label { .FZ(11); .FF("Noto Sans"); }
+            
          }
          
-         .icon { .vert(); }
-         .scro { .jaune(); right:0;left:auto; }
-         .menu { .bleu(); top:0; }
-         .info { .rouge(); }
+         .icon { .vert(); top:@E2x; left:@E2x; box-shadow:-2px 0px 5px 0px rgba(0,0,0,0.35); }
+         .scro { .jaune(); right:@E2x;left:auto; box-shadow:2px 0px 5px 0px rgba(0,0,0,0.35);}
+         .menu { .bleu(); top:0;left:@E3x;.Hx(3*@E); box-shadow:0px -2px 5px 0px rgba(0,0,0,0.35);}
+         .info { .rouge(); bottom:@E2x;box-shadow:0px 2px 5px 0px rgba(0,0,0,0.35);}
          
       
-         .coin { .T1(@T3); .B1(#212121); .Wx(2*@E);.Hx(2*@E);.POSabs(); left:~`-@{E}+"px"`;top:~`-@{E}+"px"`; .BGcol(white);  box-shadow:-1px -1px 5px 2px rgba(0,0,0,0.35);  }
-         .info + .coin { bottom:~`-@{E}+"px"`;top:auto;box-shadow:-1px 1px 5px 2px rgba(0,0,0,0.35);  }
-         .menu + .coin { right:~`-@{E}+"px"`;left:auto;box-shadow:1px -1px 5px 2px rgba(0,0,0,0.35);  }
-         .scro + .coin { bottom:~`-@{E}+"px"`;top:auto;right:~`-@{E}+"px"`;left:auto;box-shadow:1px 1px 5px 2px rgba(0,0,0,0.35);  }
-      
+         .coin { .T1(@T3); .B1(#212121); .Wx(2*@E);.Hx(2*@E);.POSabs(); left:@Ex;top:@Ex; .BGcol(white);  .Z(2);
+            box-shadow:-2px -2px 5px 0px rgba(0,0,0,0.35); }
+            
+         .info + .coin { bottom:@Ex;top:auto; box-shadow:-2px 2px 5px 0px rgba(0,0,0,0.35);  }
+         .menu + .coin { right:@Ex;left:auto; box-shadow:2px -2px 5px 0px rgba(0,0,0,0.35);  }
+         .scro + .coin { bottom:@Ex;top:auto;right:@Ex;left:auto; box-shadow:2px 2px 5px 0px rgba(0,0,0,0.35);  }
+      /*
          &:hover {
-            .coin { .B1(#212121); .Wx(3*@E);.Hx(3*@E);.POSabs(); left:~`-2*@{E}+"px"`;top:~`-2*@{E}+"px"`; .BGcol(white);  box-shadow:-1px -1px 5px 2px rgba(0,0,0,0.35);  }
-            .info + .coin { bottom:~`-2*@{E}+"px"`;top:auto;box-shadow:-1px 1px 5px 2px rgba(0,0,0,0.35);  }
-            .menu + .coin { right:~`-2*@{E}+"px"`;left:auto;box-shadow:1px -1px 5px 2px rgba(0,0,0,0.35);  }
-            .scro + .coin { bottom:~`-2*@{E}+"px"`;top:auto;right:~`-2*@{E}+"px"`;left:auto;box-shadow:1px 1px 5px 2px rgba(0,0,0,0.35);  }
+            .coin { .B1(#212121); .Wx(3*@E);.Hx(3*@E);.POSabs(); left:0;top:0; .BGcol(white);  }//box-shadow:-1px -1px 5px 2px rgba(0,0,0,0.35);  }
+            .info + .coin { bottom:0;top:auto;}//box-shadow:-1px 1px 5px 2px rgba(0,0,0,0.35);  }
+            .menu + .coin { right:0;left:auto;}//box-shadow:1px -1px 5px 2px rgba(0,0,0,0.35);  }
+            .scro + .coin { bottom:0;top:auto;right:0;left:auto;}//box-shadow:1px 1px 5px 2px rgba(0,0,0,0.35);  }
          }
-         
-         .content { .POSabs(); top:~`@{E}+"px"`; left:~`@{E}+"px"`; width:~`"calc(100% - 2* "+@{E}+"px)"`; height:~`"calc(100% - 2* "+@{E}+"px)"`; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        */ 
+         .content { .POSabs(); top:~`2*@{E}+"px"`; left:~`2*@{E}+"px"`; width:~`"calc(100% - 4 * "+@{E}+"px)"`; height:~`"calc(100% - 4 * "+@{E}+"px)"`; .Z(0);
+            display: flex;justify-content: center;align-items: center;
+            .BGcol(rgba(255,255,255,0.95)); //box-shadow:0 0 5px 2px rgba(0,0,0,0.35);
             
             p { .M0();.Px(10,10); }
          }
